styles/globals.scss
/* ... */
@media (max-width: 1400px) and (min-width:1200px) {
  .mobile-customenav {width: 64.666667%;}
}

.swiper-slide-custom {
  width: auto !important;
}
.swiper-button-next, .swiper-button-prev {
  width: 48px !important;
  height: 48px !important;
}
.swiper-button-next:after, .swiper-button-prev:after {
  font-size: 0 !important;
  background-image: url('../public/images/product-carousel-right.svg') !important;
  width: 48px;
  height: 48px;
  background-position: center;
  background-repeat: no-repeat;
}
.swiper-button-prev:after {
  background-image: url('../public/images/product-carousel-left.svg') !important;
}

.input-search {
  // height: 50px;
  // width: 50px;
  // border-style: none;
  // padding: 12px 16px;
  // font-size: 16px;
  // letter-spacing: 2px;
  // outline: none;
  transition: all .5s ease-in-out;
  // padding-right: 40px;
  // color: #171717;
  // position: absolute;
  // right: 15px;
  // top: 0px;
  font-family: "sofia-pro-regular";
  // background-color: transparent;
}

.input-search::placeholder {
  color: #4D5F9C;
  font-size: 18px;
  letter-spacing: 2px;
  font-weight: 100;

}

// .btn-search {
  // width: 50px;
  // height: 50px;
  // border-style: none;
  // font-size: 20px;
  // font-weight: bold;
  // outline: none;
  // cursor: pointer;
  // border-radius: 50%;
  // position: absolute;
  // right: 15px;
  // color: #ffffff;
  // background-color: transparent;
// }

// .input-search:hover{
//   background-color: red;
// }


.btn-search:focus~.input-search {
  width: 310px;
  border-radius: 0px;
  background-color: transparent;
  border: 1px solid rgba(255, 255, 255, .5);
  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
}

.input-search:focus {
  border: 1px solid rgba(255, 255, 255, .5);
  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
}

.search-icon {
  pointer-events: none;
  z-index: 999;
}

.search-box {
  // width: 250px;
  z-index: 9999;
}
.search-icon path {
  fill: #001a71;
}

.header:hover .search-icon path {
  fill: #fff;
}

.input-search:focus + .search-icon path{
  fill: #001A71;
}
.category-card .tab input[type=checkbox]{
  display: none;
}

.category-card .tab-label:after {
  content: "+";
  width: 24px;
  height: 24px;
  text-align: center;
  transition: all 1s;
  color: #001a71;
  font-size: 30px;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

